feat: Problem5 돈의액수를 담은 배열 생성